components/hac-pact-broker/pactbroker.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  labels:
    app: pact-broker
  name: pact-broker
spec:
  replicas: 1
  selector:
    app: pact-broker
  strategy:
    activeDeadlineSeconds: 21600
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: pact-broker
        deploymentconfig: pact-broker
    spec:
      containers:
      - env:
        - name: PACT_BROKER_DATABASE_USERNAME
          valueFrom:
            secretKeyRef:
              key: username
              name: pact-broker-secrets
        - name: PACT_BROKER_DATABASE_PASSWORD
          valueFrom:
            secretKeyRef:
              key: password
              name: pact-broker-secrets
        - name: PACT_BROKER_BASIC_AUTH_USERNAME
          valueFrom:
            secretKeyRef:
              key: pact_broker_admin
              name: pact-broker-secrets
        - name: PACT_BROKER_BASIC_AUTH_PASSWORD
          valueFrom:
            secretKeyRef:
              key: pact_broker_admin_password
              name: pact-broker-secrets
        - name: PACT_BROKER_BASIC_AUTH_READ_ONLY_USERNAME
          valueFrom:
            secretKeyRef:
              key: pact_broker_user
              name: pact-broker-secrets
        - name: PACT_BROKER_BASIC_AUTH_READ_ONLY_PASSWORD
          valueFrom:
            secretKeyRef:
              key: pact_broker_user_password
              name: pact-broker-secrets
        - name: PACT_BROKER_DATABASE_HOST
          value: postgresql-pact-broker
        - name: PACT_BROKER_DATABASE_NAME
          value: pact_broker
        - name: PACT_BROKER_PORT
          value: "8080"
        - name: PACT_BROKER_PUBLIC_HEARTBEAT
          value: "true"
        - name: PACT_BROKER_USE_FIRST_TAG_AS_BRANCH
          value: "false"
        image: pactfoundation/pact-broker:latest
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /diagnostic/status/heartbeat
            port: 8080
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: pact-broker
        ports:
        - containerPort: 8080
          protocol: TCP
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
